--- a/app/front/src/assets/css/authentication.css
+++ b/app/front/src/assets/css/authentication.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+.auth-title {
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: 1em;
+
+}
+
 .auth-container {  
   border-radius: 15px;
   
@@ -91,3 +101,5 @@
 .link:hover {
   color: #a68136;
 }
+
+
