--- a/app/front/src/assets/css/main.css
+++ b/app/front/src/assets/css/main.css
@@ -1,26 +1,4 @@
-
+/* main.css */
 body {
   background-color: var(--background-color);
-}
-
-
-.input {
-  padding: 15px 20px;
-  
-  color: var(--primary-color);
-  background-color: var(--secondary-color);
-  
-  font-size: 16px;
-  font-weight: bold;
-}
-
-
-.select {
-  padding: 15px 20px;
-  
-  color: var(--primary-color);
-  background-color: var(--secondary-color);
-  
-  font-size: 16px;
-  font-weight: bold;
 }
