--- a/app/frontend/src/assets/css/profile.css
+++ b/app/frontend/src/assets/css/profile.css
@@ -1,58 +1,173 @@
-/* 
-.avatar {
-    width: 150px;
-    height: 150px;
-    background-color: #fff;
-    border-radius: 50%;
-    position: relative;
-    display: flex;
+
+
+.screen{
+    height: 90vh;
+    display: grid;
     justify-content: center;
+    transform: translateY(10vh);
+  }
+  
+  .prof-container {
+    display: grid;
+    place-items: center;
+  
+    border-radius: 15px;
+    background-color: var(--secondary-color);
+    box-shadow: 0px 4px 20px 0px #00000040;
+    text-align: center;
+    margin: 0 auto;
+    width: 450px;
+    padding: 1em 3.5em 0 3.5em;
+    place-content: center;
+  }
+  
+  .profile-header {
+    display: flex;
     align-items: center;
-}
-
-.icon-user {
-    font-size: 50px;
-    color: #c39e42;
-}
-
-.add-photo {
+    justify-content: center;
+    gap: 30px;
+    margin-bottom: 20px;
+  }
+  
+  .avatar-container {
+    position: relative;
+    margin: 20px 0;
+  }
+  
+  .avatar {
+    position: relative;
+    width: 10em;
+    height: 10em;
+    border-radius: 50%;
+    overflow: visible;
+  }
+  
+  .avatar img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  .add-photo {
+    color: #355299;
+    background-color: #8894B140;
     position: absolute;
     bottom: 5px;
     right: 10px;
-    background-color: #8894B140;
-    color: #355299;
-    font-weight: bold;
-    font-size: 14px;
-    width: 20px;
-    height: 20px;
+    width: 35px;
+    height: 35px;
+    color: white;
     border-radius: 50%;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     cursor: pointer;
-}
-
-.form-textarea {
-    min-width: 300px;
-    max-width: 50%;
-    min-height: 5em;
-    max-height: 10em;
-
+    font-size: 16px;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+  }
+  
+  .add-photo:hover {
+    background: var(--secondary-color);
+    transform: scale(1.1);
+  }
+  
+  .gender-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
     border: 2px solid var(--primary-color);
-    border-radius: var(--border-radius);
-    outline: none;
-
-    color: var(--primary-color);
+    transition: all 0.3s ease;
+    font-size: 24px;
+    color: var(--secondary-color);
+    margin-top: 5em;
+  }
+  
+  .gender-icon i {
+    filter: invert(1);
+  }
+  
+  .gender-icon:hover {
     background-color: var(--secondary-color);
-    
+    color: white;
+  }
+  
+  .gender-icon.active {
+    color: white;
+    opacity: 1;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  }
+  
+  .gender-icon {
+    opacity: 0.1;
+    color: white;
+  }
+  
+  .input {
+      width: 20em;
+      margin: 5px 0;
+  }
+  .input::placeholder {
+      color: #8894B1;
+      font-weight: bold;
+  }
+  
+  .form-textarea {
+      min-width: 20em;
+      max-width: 50%;
+      min-height: 5em;
+      max-height: 10em;
+  
+      border: 2px solid var(--primary-color);
+      border-radius: var(--border-radius);
+      outline: none;
+  
+      color: var(--primary-color);
+      background-color: var(--secondary-color);
+  
+      padding: 15px 20px;
+      font-size: 16px;
+      font-weight: bold;
+      margin: 5px 0;
+  }
+  .form-textarea::placeholder{
+      color: #8894B1;
+      font-weight: bold;
+      font-family: 'IBM Plex Sans', sans-serif;
+  }
+  
+  .save-button {
+    width: 380px;
     padding: 15px 20px;
+    background-color: #A68136;
     font-size: 16px;
     font-weight: bold;
-    margin: 5px 0;
-}
-.form-textarea::placeholder{
-    color: #8894B1;
-    font-weight: bold;
-    font-family: 'IBM Plex Sans', sans-serif;
-}
- */
+    text-align: center;
+    color: #fff;
+    margin: 1em 0;
+  
+  }
+
+  
+  .interests-section h3 {
+    margin: 10px 0 0 0;
+  }
+  
+  .upload-indicator {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+  }
+  
